--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -100,6 +100,10 @@ body *:disabled::placeholder {
 }
 
 @layer base {
+  input[type='file'] {
+    display: none;
+  }
+
   a:hover {
     color: var(--primary-color);
   }
