--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -14,17 +14,21 @@
     border-radius: 58px;
   }
 
+  input:hover,
+  textarea:hover {
+    border: 1px solid rgba(108, 48, 237, 0.48);
+  }
+
   input:focus,
   textarea:focus {
     outline: 3.2px solid rgba(108, 48, 237, 0.32);
-    border: 1px solid rgba(108, 48, 237, 0.48);
   }
 
   input:disabled,
   textarea:disabled {
     cursor: not-allowed;
 
-    background: gainsboro;
-    border-color: gainsboro;
+    background: var(--grey-color);
+    border-color: var(--grey-color);
   }
 }
