--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -52,7 +52,7 @@
   .normal_btn {
     background: white;
     color: var(--primary-color);
-    border: 1px solid gainsboro;
+    border: 1px solid var(--grey-color);
   }
 }
 
