--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -109,7 +109,9 @@ body *:disabled::placeholder {
   @media (max-width: 426px) {
     .admin_layout {
       grid-template-columns: 1fr;
-      grid-template-rows: auto 1fr;
+      grid-template-rows:
+        var(--header-height)
+        minmax(calc(100vh - var(--header-height)), 1fr);
       grid-template-areas:
         'sidebar'
         'adn_content';
