--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -96,24 +96,18 @@ body *:disabled::placeholder {
     display: grid;
 
     grid-template-columns: auto 1fr;
-    grid-template-rows:
-      minmax(100vh, 1fr)
-      auto;
-    grid-template-areas:
-      'sidebar  adn_content'
-      'footer   footer';
+    grid-template-rows: minmax(100vh, 1fr);
+    grid-template-areas: 'sidebar  adn_content';
   }
   @media (max-width: 426px) {
     .admin_layout {
       grid-template-columns: 1fr;
       grid-template-rows:
         var(--header-height)
-        minmax(calc(100vh - var(--header-height)), 1fr)
-        auto;
+        minmax(calc(100vh - var(--header-height)), 1fr);
       grid-template-areas:
         'sidebar'
-        'adn_content'
-        'footer';
+        'adn_content';
     }
   }
 
