--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,13 @@
 @import './button.css';
 @import './inputs.css';
 
+.boom_red {
+  stroke: red;
+}
+.boom_red path {
+  stroke: red;
+}
+
 :root {
   --load_box-z-index: 99999;
   --notif-z-index: calc(var(--load_box-z-index) - 1);
