--- a/src/styles/custom/index.css
+++ b/src/styles/custom/index.css
@@ -1,5 +1,6 @@
 @import './pagination.css';
 @import './rc_tooltip.css';
+@import './date_picker.css';
 
 .Toastify__close-button {
   height: auto;
